--- a/courses/an10/homework/ha03.tex
+++ b/courses/an10/homework/ha03.tex
@@ -84,12 +84,12 @@ Zeigen Sie:
   \begin{flalign*}
     m + n' &\leq m' + n & \\
     a + m' + m + n' &\leq m' + n + a' + m & \\
-    a + n' &\leq a' + n  && \Rightarrow a \leq n & \\
+    a + n' &\leq a' + n  && \Rightarrow \overline{a} \leq \overline{n} & \\
     a + n' + b' + n &\leq a' + n + b + n' \\
-    a + b' &\leq a' + b && \Rightarrow a \leq b
+    a + b' &\leq a' + b && \Rightarrow \overline{a} \leq \overline{b}
   \end{flalign*}
 
-  Die Relation ``$\leq$'' heißt auf $\overline{\mathbb{Z}}$ ein
+  Die Relation ``$\leq$'' heißt auf $\overline{\mathbb{Z}}$ eine
   Ordnungsrelation, falls
   \begin{enumerate}[(1)]
   \item $\forall \overline{a} \in \overline{\mathbb{Z}} \colon
