--- a/courses/an10/homework/ha03.tex
+++ b/courses/an10/homework/ha03.tex
@@ -107,11 +107,11 @@ Zeigen Sie:
   \newpage
   \begin{enumerate}[(1)]
   \item Sei $\overline{a} \in \overline{\mathbb{Z}}$ beliebig.
+    Dann ist
     \[
       \overline{a} \leq \overline{a} \iff a + a' \leq_{\mathbb{N}} a' + a
     \]
-    Aus der Kommutativität der natürlichen Zahlen folgt die Annahme, somit ist
-    ``$\leq$'' unter $\overline{\mathbb{Z}}$ \emph{reflexiv}.
+    aufgrund der Kommutativität der natürlichen Zahlen wahr.
 
   \item Seien $\overline{a}, \overline{b} \in \overline{\mathbb{Z}}$ beliebig.
     \begin{itemize}
