--- a/courses/an10/homework/ha03.tex
+++ b/courses/an10/homework/ha03.tex
@@ -294,9 +294,9 @@ bezüglich der Addition mit $m + (-m) = 0$.
 \]
 
 $\Rightarrow$ Für jedes Element in $\mathbb{Q}$ existiert ein inverses
-Element bezüglich der Addition.
+Element bezüglich der Addition. \\
 
-
+\noindent
 Für die Multiplikation existieren inverse Elemente, falls
 $\forall \: m \in \mathbb{Q} \: \exists \: m^{-1} \in \mathbb{Q}$ gilt: \\
 $m \cdot m^{-1} = 1$.
