--- a/courses/an10/homework/ha03.tex
+++ b/courses/an10/homework/ha03.tex
@@ -195,11 +195,11 @@ Sei nun $1 = \qty[\frac{1}{1}]$ und $\qty[\frac{m}{m'}] \in \mathbb{Q}$
 beliebig.
 Dann ist
 \[
-  \qty[\frac{m}{m'}] + \qty[\frac{1}{1}] =
+  \qty[\frac{m}{m'}] \cdot \qty[\frac{1}{1}] =
   \qty[\frac{m \cdot 1}{m' \cdot 1}]
   = \qty[\frac{m}{m'}]
   = \qty[\frac{1 \cdot m}{1 \cdot m'}]
-  = \qty[\frac{1}{1}] + \qty[\frac{m}{m'}]
+  = \qty[\frac{1}{1}] \cdot \qty[\frac{m}{m'}]
 \]
 
 $\Rightarrow 1 = \qty[\frac{1}{1}]$ ist neutrales Element der Multiplikation auf
