feat: Hyperref to task 35 (b)

--- a/courses/an10/homework/ha05.tex
+++ b/courses/an10/homework/ha05.tex
@@ -70,7 +70,8 @@ Beweisen Sie
 
   $\Rightarrow \underline{\underline{\sup X' = \frac{1}{\inf X}}}$.
 
-\item Wenn $S$ eine obere Schranke von $X$ ist und für jedes $\epsilon > 0$
+\item \label{sec:35_b}
+  Wenn $S$ eine obere Schranke von $X$ ist und für jedes $\epsilon > 0$
   ein $x \in X$ existiert mit $S - \epsilon < x$, dann gilt $S = \sup X$.
 
   \subparagraph{Lsg.}
@@ -110,13 +111,13 @@ Beweisen Sie
   von $X + Y$.
 
   Sei nun $\frac{\epsilon}{2} > 0$ beliebig.
-  Nach $(b)$ existieren $x \in X$ und $y \in Y$ mit
+  Nach \hyperref[sec:35_b]{(b)} existieren $x \in X$ und $y \in Y$ mit
   $x' - \frac{\epsilon}{2} < x$ und $y' - \frac{\epsilon}{2} < y$.
 
   $\Rightarrow \forall \epsilon > 0 \: \colon \exists \: (x + y) \in X + Y
   \colon x' + y' - \epsilon < x + y$
 
-  $\Rightarrow$ aus $(b)$ folgt
+  $\Rightarrow$ aus \hyperref[sec:35_b]{(b)} folgt
   $x' + y' = \sup X + \sup Y = \sup \qty\big(X + Y)$
 \end{enumerate}
 
